--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
   "main": "regreplacer.js",
   "scripts": {
     "test": "mocha test",
-    "build": "webpack; npm run min;",
-    "min": "minify ./dist/regreplacer.bundle.js --out-dir ./dist --out-file ./dist/regreplacer.bundle.min.js --mangle.keepClassName",
     "ex": "node examples/main-example.js"
   },
   "repository": {
@@ -27,14 +25,8 @@
   },
   "homepage": "https://github.com/ALMaclaine/regreplacer#readme",
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-minify": "^0.2.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
     "chai": "^4.1.2",
-    "mocha": "^3.5.3",
-    "webpack": "^3.6.0"
+    "mocha": "^3.5.3"
   },
   "dependencies": {}
 }
