--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A library to facilitate regex matching, match/capture retrieval and string replacement",
   "main": "regreplacer.js",
   "scripts": {
-    "test": "mocha test",
+    "test": "mocha test --compilers js:babel-register --require babel-polyfill",
     "ex": "node ex/main-example.js",
     "exAll": "node ex/runAll.js"
   },
@@ -26,8 +26,22 @@
   },
   "homepage": "https://github.com/ALMaclaine/regreplacer#readme",
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.26.0",
     "chai": "^4.1.2",
-    "mocha": "^3.5.3"
+    "eslint": "^4.16.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.6.0",
+    "mocha": "^3.5.3",
+    "webpack": "^3.10.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "html-webpack-plugin": "^2.30.1"
+  }
 }
