--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "regreplacer.js",
   "scripts": {
     "test": "mocha test --compilers js:babel-register --require babel-polyfill",
-    "ex": "node ex/main-example.js",
-    "exAll": "node ex/runAll.js"
+    "ex": "node -r @std/esm ex/main-example",
+    "exAll": "node -r @std/esm ex/runAll"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/ALMaclaine/regreplacer#readme",
   "devDependencies": {
+    "@std/esm": "^0.20.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-polyfill": "^6.26.0",
