--- a/package.json
+++ b/package.json
@@ -2,11 +2,16 @@
   "name": "regreplacer",
   "version": "1.1.7",
   "description": "A library to facilitate regex matching, match/capture retrieval and string replacement",
-  "main": "regreplacer.js",
+  "main": "dist/regreplacer.js",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "test": "mocha test --compilers js:babel-register --require babel-polyfill",
     "ex": "node -r @std/esm ex/main-example",
-    "exAll": "node -r @std/esm ex/runAll"
+    "exAll": "node -r @std/esm ex/runAll",
+    "build": "webpack",
+    "prepublishOnly": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -26,12 +31,12 @@
   },
   "homepage": "https://github.com/ALMaclaine/regreplacer#readme",
   "devDependencies": {
+    "@babel/core": "^7.0.0-beta.40",
+    "@babel/polyfill": "^7.0.0-beta.40",
+    "@babel/preset-env": "^7.0.0-beta.40",
+    "@babel/register": "^7.0.0-beta.40",
     "@std/esm": "^0.20.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-register": "^6.26.0",
+    "babel-loader": "^8.0.0-beta.0",
     "chai": "^4.1.2",
     "eslint": "^4.16.0",
     "eslint-config-airbnb": "^16.1.0",
